--- a/style.css
+++ b/style.css
@@ -1,12 +1,57 @@
+@font-face {
+    font-family: 'sport-font';
+    src: url('fonts/futura_condensed_extra_bold-webfont.eot');
+    src: url('fonts/futura_condensed_extra_bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/futura_condensed_extra_bold-webfont.woff2') format('woff2'),
+         url('fonts/futura_condensed_extra_bold-webfont.woff') format('woff'),
+         url('fonts/futura_condensed_extra_bold-webfont.ttf') format('truetype'),
+         url('fonts/futura_condensed_extra_bold-webfont.svg#futuracondensed_extra_bold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+body {
+    font-family: 'sport-font';
+    text-align: center;
+    background-color: rgb(0, 61, 31);
+    color: white;
+}
+
+h1 {
+    font-size: 2.5em;
+}
+
+#text-zone {
+    text-align: center;
+}
+
+#game-infos {
+    font-size: 1.5em;
+    width: 60%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+#game-zone {
+    padding: 2%;
+    display: flex;
+    justify-content: center;
+}
+
 .grid {
     display: flex;
     flex-wrap: wrap;
-    height: 450px;
-    width: 600px;
-    border: 1px black solid;
+    justify-content: space-around;
+    height: 500px;
+    width: 650px;
 }
 
 img {
     width: 150px;
     height: 150px;
+    border: 1px white solid;
+    border-radius: 10px;
 }
